--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container" >
-    <b>Course List:</b>
+    <b>Courses Available:</b>
 <div class="card-body">
   <table class="table table-hover">
     <thead>
@@ -16,28 +16,26 @@
   </table>
 </div>
     
-  
-  
+ 
 </div>
 <br>
 <div class="container">
-      Add Course:
+     <b> Add Course:</b>
     <div class="card-body">
 
       <div class="form-group">
-        <label for="name">Course Name</label>
-        <input type="text" id="name" class="form-control"  #cname>
+        <label for="name"></label>
+        <input type="text" id="name" class="form-control"  #cname placeholder="Enter Course Name">
       </div>
       <div class="form-group">
         <button class="btn btn-primary" (click)="addCourse(cname.value)">Submit</button>
       </div>
-
     </div>
   </div>
   <br>
 
   <div class="container">
-        Batch List
+       <b>Batches currently running:</b>
       <div class="card-body">
         <table class="table table-hover">
           <thead>
@@ -56,14 +54,14 @@
 <br>
 
   <div class="container">
-        Add Batch:      
+        <b>Add Batch:</b>   
       <div class="card-body">
         <div class="form-group">
-          <label for="name">Batch Name</label>
-          <input type="text" id="name" class="form-control" required #name>
+          <label for="name"></label>
+          <input type="text" id="name" class="form-control" required #name placeholder="Enter Batch Name">
         </div>
         <select class="form-control" #courseId>
-          <option selected>Select Course</option>
+          <option selected>please select a course</option>
           <option *ngFor ="let c of courseList" [value]="c.id">{{c.name}}</option>
         </select>
         <div class="form-group">
