--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,12 +1,12 @@
 <br>
 <div class="container">
-      <b>Student List:</b>
+      <b>List of Students:</b>
     <div class="card-body">
       <table class="table table-hover">
         <thead>
         <th>S.no</th>
-        <th>student</th>
-        <th>Batch</th>
+        <th>Student Name</th>
+        <th>Batch Name</th>
         </thead>
         <tbody>
           <tr *ngFor="let s of studentlist">
@@ -20,20 +20,20 @@
 </div>
 <br>
 <div class="container">
-      Add Student:
+     <b> Add Student:</b>
     <div class="card-body">
       <form>
         <div class="form-group">
-          <label for="name">Student Name</label>
-          <input type="text" id="name" class="form-control" required #inp>
+          <label for="name"></label>
+          <input type="text" id="name" class="form-control" required #inp placeholder="Enter Student Name">
         </div>
         <select class="form-control" #courseId>
-          <option selected>Select Course</option>
+          <option selected>please select a course</option>
           <option *ngFor ="let c of courselist" [value]="c.id">{{c.name}}</option>
         </select>
         <br>
         <select class="form-control" #batchId>
-          <option selected>Select Batch</option>
+          <option selected>please select a batch</option>
           <option *ngFor ="let c of batchlist" [value]="c.id">{{c.name}}</option>
         </select>
         <br>
