--- a/src/app/subjects/subjects.component.html
+++ b/src/app/subjects/subjects.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container">
-      Subject List:
+     <b> List of Subjects: </b>
     <div class="card-body">
       <table class="table table-hover">
         <thead>
@@ -20,15 +20,15 @@
 </div>
 <br>
 <div class="container">
-      Add Subjects:    
+     <b>Add Subjects:</b>  
     <div class="card-body">
       <form>
         <div class="form-group">
-          <label for="name">Subject Name</label>
-          <input type="text" id="name" class="form-control" required #inp>
+          <label for="name"></label>
+          <input type="text" id="name" class="form-control" required #inp placeholder="Enter Subject Name">
         </div>
         <select class="form-control" #courseId>
-          <option selected>Select Course</option>
+          <option selected>please select a course</option>
           <option *ngFor ="let c of courselist" [value]="c.id">{{c.name}}</option>
         </select>
         <br>
